# voidshell-dev

./: CLAUDE.md  SPEC.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  config.rs  main.rs  shortcuts.rs  system.rs
src/components/Grid/: Grid.tsx
src/components/Search/: Search.tsx
src/components/Shortcuts/: ContextMenu.tsx  FolderPortal.tsx  NinjaMenu.tsx  ShortcutForm.tsx  ShortcutIcon.tsx
src/components/Widgets/: MonitorPicker.tsx  SystemTelemetry.tsx  WidgetLayer.tsx
src/hooks/: useFileDialog.ts  useOllama.ts  useSettings.ts  useSystem.ts
src/theme/: index.css
