[package]
name = "voidshell"
version = "0.1.0"
description = "A high-performance desktop environment overlay for Windows"
authors = []
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
